Bug fix - fixed a bug with indices in AnimeSelection

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,24 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter the number belonging to the anime you want from the list below\n",
-      "1 Boku no Hero Academia\n",
-      "2 Boku no Hero Academia 2nd Season\n",
-      "3 Boku no Hero Academia 3rd Season\n",
-      "4 Boku no Hero Academia 4th Season\n",
-      "5 Boku no Hero Academia 5th Season\n",
-      "6 Boku no Hero Academia 6th Season\n",
-      "7 Boku no Hero Academia the Movie 1: Futari no Hero\n",
-      "8 Boku no Hero Academia the Movie 2: Heroes:Rising\n",
-      "\n",
-      "Invalid number Senpwai\n",
       "Please enter the number belonging to the anime you want from the list below\n",
       "1 Boku no Hero Academia\n",
       "2 Boku no Hero Academia 2nd Season\n",
@@ -85,7 +74,7 @@
     "\n",
     "        index_of_chosen_anime = int(input(\"Number> \"))-1\n",
     "\n",
-    "        if not index_of_chosen_anime <= 0 and not len(results) < index_of_chosen_anime:\n",
+    "        if not index_of_chosen_anime < 0 and not len(results) <= index_of_chosen_anime:\n",
     "            for index, result in enumerate(results):\n",
     "                if index == index_of_chosen_anime:\n",
     "                    anime_id = result[\"session\"]\n",
@@ -186,31 +175,17 @@
     "    return download_sizes\n",
     "\n",
     "download_sizes = DownloadSizes(download_info)\n",
-    "download_sizes\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://animepahe.ru/play/b781c27a-dc49-1373-64a9-f40de60ca0ee/ddb34969e076bd8072ed5961e9179a463b677e59f0e5056d41e2256c57266ed5'"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response = requests.get(home_url+api_url_extension+\"release&id=\"+anime_id+\"&sort=episode_asc\")\n",
-    "episodes = json.loads(response.content.decode(\"UTF-8\"))[\"data\"]\n",
-    "test_episode = home_url+\"play/\"+anime_id+\"/\"+str(episodes[0][\"session\"])\n",
-    "test_episode"
+    "def DownloadSettings():\n",
+    "    "
    ]
   },
   {
