Modularisation - Implemented DownloadSettings that prompts the user for the setting they want for the downloads and generates new download links and sizes based off the new setting respectively. Also computed the sum of the download size which is to be displayed to the user

--- a/main.ipynb
+++ b/main.ipynb
@@ -180,13 +180,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Prompts the user for the settings of their downloads, the quality and whether subbed or dubbed\n",
+    "\n",
     "def DownloadSettings():\n",
+    "\n",
+    "    met_conditions = 0\n",
+    "    def quality_chooser(quality):\n",
+    "        if quality == \"360p\" or quality == \"360\":\n",
+    "            return 0\n",
+    "        elif quality == \"720p\" or quality ==\"720\":\n",
+    "            return 1\n",
+    "        elif quality == \"1080p\" or quality ==\"1080\":\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return \"error\"\n",
+    "    \n",
+    "    def sub_or_dubber(sub_or_dub):\n",
+    "        if sub_or_dub == \"sub\" or sub_or_dub == \"s\":\n",
+    "            return 1\n",
+    "        elif sub_or_dub == \"dub\" or sub_or_dub == \"dub\":\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return \"error\"\n",
+    "\n",
+    "    \n",
+    "    quality = 69\n",
+    "    sub_or_dub = 69\n",
+    "\n",
+    "    while met_conditions < 2:\n",
+    "        while quality_chooser(quality) == \"error\":\n",
+    "            quality = input(\"What quality do you want to download in Senpwai uWu? 360p, 720p or 1080p> \")\n",
+    "        quality = quality_chooser(quality)\n",
+    "        met_conditions+=1\n",
+    "\n",
+    "        while sub_or_dubber(sub_or_dub) == \"error\":\n",
+    "            sub_or_dub = input(\"Sub or dub> \").lower()\n",
+    "        sub_or_dub = sub_or_dubber(sub_or_dub)\n",
+    "        met_conditions+=1\n",
+    "\n",
+    "    return quality, sub_or_dub\n",
+    "\n",
+    "\n",
+    "quality, sub_or_dub = DownloadSettings()\n",
+    "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3313"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generates new download links and download sizes for the episodes based off the user's configured settings\n",
+    "def ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub):\n",
+    "    if sub_or_dub:\n",
+    "        configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
+    "        configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
+    "    elif not sub_or_dub:\n",
+    "        configured_download_links = [episode_links[3:] for episode_links in download_links]\n",
+    "        configured_download_sizes = [episode_links[3:] for episode_links in download_sizes]\n",
+    "\n",
+    "    configured_download_links = [episode_links[quality] for episode_links in download_links]\n",
+    "    configured_download_sizes = [episode_links[quality] for episode_links in download_sizes]\n",
+    "    \n",
+    "    return configured_download_links, configured_download_sizes\n",
+    "\n",
+    "configured_download_links, configured_download_sizes = ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub)\n",
+    "configured_download_links\n",
+    "configured_download_sizes\n",
+    "total_download_size = sum(configured_download_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
