Download Automation - implemented a SupportedBrowserCheck that checks whether the user is using a supported browser and opens a simulated browser page using Selenium. It then passes control to the parent function DownloadEpisodes which then automates the download process

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,20 @@
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
+    "from webdriver_manager.microsoft import EdgeChromiumDriverManager\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from webdriver_manager.firefox import GeckoDriverManager\n",
+    "\n",
+    "from selenium.webdriver.edge.service import Service as EdgeService\n",
+    "from selenium.webdriver.chrome.service import Service as ChromeService\n",
+    "from selenium.webdriver.firefox.service import Service as FirefoxService\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "import webbrowser\n",
+    "import time\n",
+    "\n",
+    "\n",
     "home_url = \"https://animepahe.ru/\"\n",
     "anime_url = home_url+\"anime/\"\n",
     "api_url_extension = \"api?m=\"\n",
@@ -20,7 +34,7 @@
     "sub_or_dub = \"sub\"\n",
     "\n",
     "#keyword = input(\"Enter the name of the anime you want to download> \")\n",
-    "keyword = \"Boku no hero\"\n",
+    "keyword = \"Senyu\"\n",
     "\n",
     "#Searches for the anime in the animepahe database\n",
     "def Searcher(keyword):\n",
@@ -34,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -42,25 +56,14 @@
      "output_type": "stream",
      "text": [
       "Please enter the number belonging to the anime you want from the list below\n",
-      "1 Boku no Hero Academia\n",
-      "2 Boku no Hero Academia 2nd Season\n",
-      "3 Boku no Hero Academia 3rd Season\n",
-      "4 Boku no Hero Academia 4th Season\n",
-      "5 Boku no Hero Academia 5th Season\n",
-      "6 Boku no Hero Academia 6th Season\n",
-      "7 Boku no Hero Academia the Movie 1: Futari no Hero\n",
-      "8 Boku no Hero Academia the Movie 2: Heroes:Rising\n",
-      "\n",
-      "Invalid number Senpwai\n",
-      "Please enter the number belonging to the anime you want from the list below\n",
-      "1 Boku no Hero Academia\n",
-      "2 Boku no Hero Academia 2nd Season\n",
-      "3 Boku no Hero Academia 3rd Season\n",
-      "4 Boku no Hero Academia 4th Season\n",
-      "5 Boku no Hero Academia 5th Season\n",
-      "6 Boku no Hero Academia 6th Season\n",
-      "7 Boku no Hero Academia the Movie 1: Futari no Hero\n",
-      "8 Boku no Hero Academia the Movie 2: Heroes:Rising\n"
+      "1 Senyuu.\n",
+      "2 Senyuu. 2\n",
+      "3 Senyuu. Specials\n",
+      "4 Senjuushi\n",
+      "5 Senryuu Shoujo\n",
+      "6 Senyoku no Sigrdrifa\n",
+      "7 Senyoku no Sigrdrifa: Dai-909 Senjutsu Hime-tai Sentou Kiroku!\n",
+      "8 Chiisai Sensuikan ni Koi wo Shita Dekasugiru Kujira no Hanashi\n"
      ]
     }
    ],
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,49 +124,14 @@
     "    #Scrapes the download data of each episode and stores the info for each quality and dub or sub in a list which is contained in another list containing all episodes\n",
     "    download_info = [[episode_info.text.strip() for episode_info in episode_data] for episode_data in download_data] \n",
     "    return (download_links, download_info)   \n",
-    "download_links, download_info = DownloadData(episode_links)"
+    "download_links, download_info = DownloadData(episode_links)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[55, 121, 190, 52, 116, 182],\n",
-       " [69, 155, 242, 67, 150, 235],\n",
-       " [78, 183, 276, 76, 179, 269],\n",
-       " [72, 164, 244, 70, 159, 235],\n",
-       " [76, 172, 272, 73, 168, 265],\n",
-       " [54, 117, 182, 52, 113, 175],\n",
-       " [56, 141, 244, 54, 138, 239],\n",
-       " [64, 145, 225, 62, 141, 218],\n",
-       " [56, 122, 192, 54, 119, 187],\n",
-       " [67, 153, 255, 65, 150, 250],\n",
-       " [56, 125, 196, 55, 122, 191],\n",
-       " [58, 127, 199, 56, 124, 193],\n",
-       " [46, 98, 150, 44, 94, 144],\n",
-       " [54, 121, 188, 52, 117, 181],\n",
-       " [52, 115, 179, 50, 112, 174],\n",
-       " [54, 124, 197, 52, 121, 192],\n",
-       " [58, 134, 218, 57, 132, 214],\n",
-       " [46, 100, 157, 44, 96, 150],\n",
-       " [49, 106, 163, 48, 103, 157],\n",
-       " [50, 110, 169, 48, 105, 162],\n",
-       " [53, 113, 172, 51, 109, 166],\n",
-       " [68, 159, 249, 66, 157, 242],\n",
-       " [67, 155, 243, 65, 152, 237],\n",
-       " [68, 161, 241, 66, 158, 234],\n",
-       " [43, 92, 142, 41, 88, 135]]"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Returns the sizes of the downloads\n",
     "def DownloadSizes(download_info):\n",
@@ -180,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,110 +200,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3313"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub\n"
+     ]
     }
    ],
    "source": [
     "#Generates new download links and download sizes for the episodes based off the user's configured settings\n",
     "def ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub):\n",
     "    if sub_or_dub:\n",
+    "        print(\"sub\")\n",
     "        configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
     "        configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
     "    elif not sub_or_dub:\n",
-    "        configured_download_links = [episode_links[3:] for episode_links in download_links]\n",
-    "        configured_download_sizes = [episode_links[3:] for episode_links in download_sizes]\n",
+    "        if len(download_links[0]) == 3:\n",
+    "            print(\"There seems to be no dub for this anime, switching to sub\")\n",
+    "            configured_download_links = [episode_links[:3] for episode_links in download_links]\n",
+    "            configured_download_sizes = [episode_links[:3] for episode_links in download_sizes]\n",
+    "        elif len(download_links[0]) == 6:\n",
+    "            print(\"dub\")\n",
+    "            configured_download_links = [episode_links[3:] for episode_links in download_links]\n",
+    "            configured_download_sizes = [episode_links[3:] for episode_links in download_sizes]\n",
     "\n",
-    "    configured_download_links = [episode_links[quality] for episode_links in download_links]\n",
-    "    configured_download_sizes = [episode_links[quality] for episode_links in download_sizes]\n",
+    "    configured_download_links = [episode_links[quality] for episode_links in configured_download_links]\n",
+    "    configured_download_sizes = [episode_links[quality] for episode_links in configured_download_sizes]\n",
     "    \n",
     "    return configured_download_links, configured_download_sizes\n",
     "\n",
     "configured_download_links, configured_download_sizes = ConfigureDownloadData(download_links, download_sizes, quality, sub_or_dub)\n",
-    "configured_download_links\n",
-    "configured_download_sizes\n",
     "total_download_size = sum(configured_download_sizes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 42\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     36\u001b[0m         sub_or_dub \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPlease enter a valid choice Senpwai> \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 42\u001b[0m download_page \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mget(link[quality_chooser(quality)])\n\u001b[0;32m     44\u001b[0m \u001b[39mprint\u001b[39m(link[quality_chooser(quality)])\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Downloading: 16.9kB [00:00, 8.65MB/s]                   \n"
      ]
     }
    ],
    "source": [
-    "response = requests.get(test_episode)\n",
-    "page = response.content\n",
-    "soup = BeautifulSoup(page, \"html.parser\")\n",
-    "episode_links = soup.find_all(\"a\", class_=\"dropdown-item\", target=\"_blank\")\n",
+    "def DownloadEpisodes(configured_download_links):\n",
     "\n",
-    "quality = input(\"What quality do you want to download in Senpwai uWu? 360p, 720p or 1080p> \")\n",
-    "\n",
-    "def quality_chooser(quality=\"720\"):\n",
-    "    if quality == \"360p\" or quality == \"360\":\n",
-    "        return 0\n",
-    "    elif quality == \"720p\" or quality ==\"720\":\n",
-    "        return 1\n",
-    "    elif quality == \"1080p\" or quality ==\"1080\":\n",
-    "        return 2\n",
-    "    else:\n",
-    "        return \"error\"\n",
-    "\n",
-    "while(True):\n",
-    "    if quality_chooser == \"error\":\n",
-    "        sub_or_dub = input(\"Pwease enter a valid choice Senpai> \")\n",
-    "    else:\n",
-    "        break\n",
+    "    def SupportedBrowserCheck():\n",
+    "        service_edge = EdgeService(executable_path=EdgeChromiumDriverManager().install())\n",
+    "        service_chrome = ChromeService(executable_path=ChromeDriverManager().install())\n",
+    "        service_firefox = FirefoxService(executable_path=GeckoDriverManager().install())\n",
+    "        try:\n",
+    "            driver_chrome = webdriver.Chrome(service=service_chrome)\n",
+    "            return driver_chrome\n",
+    "        except:\n",
+    "            try:\n",
+    "                driver_edge = webdriver.Edge(service=service_edge)\n",
+    "                return driver_edge\n",
+    "            except:\n",
+    "                try:\n",
+    "                    driver_firefox = webdriver.Firefox(service=service_firefox)\n",
+    "                    return driver_firefox\n",
+    "                except:\n",
+    "                    print(\"Sowwy the onwy supported browses are Chrome, Edge and Firefox\")\n",
+    "                    webbrowser.open_new(\"https://google.com/chrome\")\n",
     "\n",
     "\n",
-    "sub_or_dub = input(\"Sub or dub> \")\n",
+    "    browser_page = SupportedBrowserCheck()\n",
+    "    for configured_download_link in configured_download_links:\n",
+    "        browser_page.get(configured_download_link)\n",
+    "        time.sleep(6)\n",
+    "        soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
+    "        server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
     "\n",
-    "while(True):\n",
-    "    if sub_or_dub.lower() == \"sub\":\n",
-    "        link = [link[\"href\"] for link in episode_links[:3]]\n",
-    "        break\n",
-    "    elif sub_or_dub.lower() == \"dub\":\n",
-    "        link = [link[\"href\"] for link in episode_links[3:]]\n",
-    "        print(link)\n",
-    "        break\n",
-    "    else:\n",
-    "        sub_or_dub = input(\"Please enter a valid choice Senpwai> \")\n",
-    "\n",
+    "        browser_page.get(server_download_link)\n",
+    "        \n",
+    "        server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
+    "        download = browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "download_page = requests.get(link[quality_chooser(quality)])\n",
-    "\n",
-    "print(link[quality_chooser(quality)])"
+    "DownloadEpisodes(configured_download_links)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://kwik.cx/f/8fIarY2yLRP2'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "server_download_link"
    ]
   }
  ],
